// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ticket reducers action ADD_TICKET_AUDIT_LOG_EVENTS should add new received event, and update existing one 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [
    {
      "context": "foo",
      "created_datetime": "2019-11-15 19:00:00.000000",
      "data": {
        "foo": "bar",
      },
      "id": 1,
      "object_id": 1,
      "object_type": "Ticket",
      "type": "ticket-closed",
      "uri": "/api/events/3265847/",
      "user_id": 1,
    },
    {
      "context": "foo",
      "created_datetime": "2019-11-15 19:00:00.000000",
      "data": null,
      "id": 2,
      "object_id": 1,
      "object_type": "Ticket",
      "type": "ticket-reopened",
      "uri": "/api/events/3265847/",
      "user_id": 1,
    },
  ],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers action ADD_TICKET_AUDIT_LOG_EVENTS should add received event when it is not in the store yet 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [
    {
      "context": "foo",
      "created_datetime": "2019-11-15 19:00:00.000000",
      "data": null,
      "id": 1,
      "object_id": 1,
      "object_type": "Ticket",
      "type": "ticket-reopened",
      "uri": "/api/events/3265847/",
      "user_id": 1,
    },
  ],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers action ADD_TICKET_AUDIT_LOG_EVENTS should not add received event when it is a phone event 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers action ADD_TICKET_AUDIT_LOG_EVENTS should update stored event when received event already exists in the store 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [
    {
      "context": "foo",
      "created_datetime": "2019-11-15 19:00:00.000000",
      "data": {
        "foo": "bar",
      },
      "id": 1,
      "object_id": 1,
      "object_type": "Ticket",
      "type": "ticket-reopened",
      "uri": "/api/events/3265847/",
      "user_id": 1,
    },
  ],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers action REMOVE_TICKET_AUDIT_LOG_EVENTS should remove audit log events 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [
    {
      "account_id": 1,
      "context": "foo",
      "created_datetime": "2019-11-15 19:00:00.000000",
      "data": null,
      "id": 2,
      "object_id": 1,
      "object_type": "Ticket",
      "type": "foo",
      "user_id": 1,
    },
  ],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers action RESTORE_TICKET_DRAFT should hydrate the state with ticket draft data 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": undefined,
  "assignee_user": undefined,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "Waitint to send that ticket",
  "tags": [
    {
      "name": "return",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers action SEND_INTENT_FEEDBACK_SUCCESS should update the intents with the new ones 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [
    {
      "id": 1,
      "intents": [
        {
          "is_user_feedback": false,
          "name": "return/request",
          "rejected": false,
        },
        {
          "is_user_feedback": false,
          "name": "return/status",
          "rejected": true,
        },
        {
          "is_user_feedback": false,
          "name": "shipping/change",
          "rejected": true,
        },
      ],
    },
  ],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers action TICKET_MESSAGE_DELETED should remove message 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers handle MERGE_CUSTOMER should do nothing since there is no customer in state for now 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers handle MERGE_CUSTOMER should update customer and no change to the external_data as there is no old external_data 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": {
    "id": 1,
    "name": "Alex",
  },
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers handle MERGE_CUSTOMER should update customer and the external_data 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": {
    "external_data": {
      "my-awesome-app-id-1": {
        "badge": "WORST customer",
      },
      "my-awesome-app-id-2": {
        "points": 500,
      },
    },
    "id": 1,
    "name": "Alex",
  },
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers handle MERGE_CUSTOMER should update customer keeping the old external_data 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": {
    "external_data": {
      "my-awesome-app-id-1": {
        "badge": "Best customer",
      },
    },
    "id": 1,
    "name": "Alex",
  },
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers handle MERGE_CUSTOMER_EXTERNAL_DATA should do nothing since there is no customer in state 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers handle MERGE_CUSTOMER_EXTERNAL_DATA should update the external_data of the customer 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": {
    "external_data": {
      "my-awesome-app-id-1": {
        "badge": "WORST customer",
      },
      "my-awesome-app-id-2": {
        "points": 500,
      },
    },
    "id": 1,
    "name": "Romain",
  },
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers handle MERGE_TICKET should keep audit log events 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": {
    "data": {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": [
    {
      "object_id": 1,
      "type": "ticket-created",
    },
    {
      "object_id": 1,
      "type": "ticket-closed",
    },
    {
      "object_id": 1,
      "type": "ticket-reopened",
    },
  ],
  "id": 1,
  "is_unread": false,
  "messages": [
    {
      "body_html": "<div>hi</div>",
      "body_text": "hi",
      "channel": "email",
      "created_datetime": "2017-07-28T22:00:00",
      "id": 1,
    },
    {
      "body_html": "<div>hello</div>",
      "body_text": "hello",
      "channel": "email",
      "created_datetime": "2017-07-29T22:00:00",
      "id": 2,
    },
  ],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers handle MERGE_TICKET should keep old ticket.customer.external_data 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": {
    "data": {
      "hello": "world!",
    },
    "external_data": {
      "my-awesome-app-id-1": {
        "badge": "Best customer",
      },
    },
    "id": 1,
  },
  "events": [],
  "id": 1,
  "is_unread": false,
  "messages": [
    {
      "body_html": "<div>hi</div>",
      "body_text": "hi",
      "channel": "email",
      "created_datetime": "2017-07-28T22:00:00",
      "id": 1,
    },
    {
      "body_html": "<div>hello</div>",
      "body_text": "hello",
      "channel": "email",
      "created_datetime": "2017-07-29T22:00:00",
      "id": 2,
    },
  ],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers handle MERGE_TICKET should merge ticket and order messages 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": {
    "data": {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": [],
  "id": 1,
  "is_unread": false,
  "messages": [
    {
      "body_html": "<div>hi</div>",
      "body_text": "hi",
      "channel": "email",
      "created_datetime": "2017-07-28T22:00:00",
      "id": 1,
    },
    {
      "body_html": "<div>hello</div>",
      "body_text": "hello",
      "channel": "email",
      "created_datetime": "2017-07-29T22:00:00",
      "id": 2,
    },
  ],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers handle MERGE_TICKET should remove pending message 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": {
    "data": {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": [],
  "id": 1,
  "is_unread": false,
  "messages": [
    {
      "body_html": "<div>hi</div>",
      "body_text": "hi",
      "channel": "email",
      "created_datetime": "2017-07-28T22:00:00",
      "id": 1,
    },
    {
      "body_html": "<div>hello</div>",
      "body_text": "hello",
      "channel": "email",
      "created_datetime": "2017-07-29T22:00:00",
      "id": 2,
    },
  ],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers handle MERGE_TICKET should update ticket.customer.external_data 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": {
    "data": {
      "hello": "world!",
    },
    "external_data": {
      "my-awesome-app-id-1": {
        "badge": "WORST customer",
      },
      "my-awesome-app-id-2": {
        "points": 500,
      },
    },
    "id": 1,
  },
  "events": [],
  "id": 1,
  "is_unread": false,
  "messages": [
    {
      "body_html": "<div>hi</div>",
      "body_text": "hi",
      "channel": "email",
      "created_datetime": "2017-07-28T22:00:00",
      "id": 1,
    },
    {
      "body_html": "<div>hello</div>",
      "body_text": "hello",
      "channel": "email",
      "created_datetime": "2017-07-29T22:00:00",
      "id": 2,
    },
  ],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle ADD_TICKET_TAGS 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [
    {
      "name": "billing",
    },
    {
      "name": "refund",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle ADD_TICKET_TAGS 2`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [
    {
      "name": "billing",
    },
    {
      "name": "refund",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle ADD_TICKET_TAGS 3`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [
    {
      "name": "billing",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle APPLY_MACRO 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": {
      "id": 1,
    },
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle APPLY_MACRO 2`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": {
      "id": 2,
    },
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle CLEAR_APPLIED_MACRO 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle CLEAR_TICKET 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle DELETE_ACTION_ON_APPLIED 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": {
      "actions": {
        "1": {
          "arguments": {
            "foo": "bar",
          },
        },
      },
      "id": 1,
    },
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle DELETE_TICKET_MESSAGE_SUCCESS 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [
    {
      "id": 1,
    },
  ],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle DELETE_TICKET_PENDING_MESSAGE 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [
      {
        "_internal": {
          "id": 2,
        },
        "body_html": "<div>hello</div>",
        "body_text": "hello",
        "channel": "email",
      },
    ],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle DISPLAY_HISTORY_ON_NEXT_PAGE 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": true,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle DISPLAY_HISTORY_ON_NEXT_PAGE 2`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle FETCH_TICKET_START 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": true,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle FETCH_TICKET_START 2`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": {
    "data": {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": [],
  "id": 1,
  "is_unread": false,
  "messages": [
    {
      "body_html": "<div>hello</div>",
      "body_text": "hello",
      "channel": "email",
      "id": 1,
    },
  ],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle FETCH_TICKET_START 3`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle MARK_TICKET_DIRTY 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": true,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle MARK_TICKET_DIRTY 2`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle MERGE_CUSTOMERS_SUCCESS 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle MERGE_CUSTOMERS_SUCCESS 2`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": {
    "id": 1,
    "name": "Alex",
  },
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_START and NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_ERROR 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [
      {
        "_internal": {
          "id": "123",
          "status": "open",
        },
        "body_html": "<div>hello</div>",
        "body_text": "hello",
        "channel": "email",
        "created_datetime": "2017-01-01T00:00:00.000Z",
        "originalMessage": {
          "body_html": "<div>hello</div>",
          "body_text": "hello",
          "channel": "email",
          "source": {
            "bcc": [],
            "cc": [],
            "from": {},
            "to": [
              {
                "address": "alex@gorgias.io",
              },
            ],
            "type": "email",
          },
        },
        "source": {
          "bcc": [],
          "cc": [],
          "from": {},
          "to": [
            {
              "address": "alex@gorgias.io",
            },
          ],
          "type": "email",
        },
      },
    ],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_START and NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_ERROR 2`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [
      {
        "_internal": {
          "id": 1,
          "status": "open",
        },
        "body_html": "<div>hello</div>",
        "body_text": "hello",
        "channel": "email",
        "created_datetime": "2017-07-29T22:00:00",
        "failed_datetime": "2017-01-01T00:00:00.000Z",
        "originalMessage": {
          "body_html": "<div>hello</div>",
          "body_text": "hello",
          "channel": "email",
          "source": {
            "bcc": [],
            "cc": [],
            "from": {},
            "to": [
              {
                "address": "alex@gorgias.io",
              },
            ],
            "type": "email",
          },
        },
        "source": {
          "bcc": [],
          "cc": [],
          "from": {},
          "to": [
            {
              "address": "alex@gorgias.io",
            },
          ],
          "type": "email",
        },
      },
    ],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_START and NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_ERROR 3`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [
      {
        "_internal": {
          "id": 1,
          "status": "open",
        },
        "body_html": "<div>hello</div>",
        "body_text": "hello",
        "channel": "email",
        "created_datetime": "2017-07-29T22:00:00",
        "originalMessage": {
          "body_html": "<div>hello</div>",
          "body_text": "hello",
          "channel": "email",
          "source": {
            "bcc": [],
            "cc": [],
            "from": {},
            "to": [
              {
                "address": "alex@gorgias.io",
              },
            ],
            "type": "email",
          },
        },
        "source": {
          "bcc": [],
          "cc": [],
          "from": {},
          "to": [
            {
              "address": "alex@gorgias.io",
            },
          ],
          "type": "email",
        },
      },
    ],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle NEW_MESSAGE_SUBMIT_TICKET_SUCCESS 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "id": 12,
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle REMOVE_TICKET_MESSAGE_REQUEST 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [
    {
      "id": 1,
      "request_id": null,
    },
  ],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle REMOVE_TICKET_TAG 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [
    {
      "name": "refund",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle REMOVE_TICKET_TAG 2`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [
    {
      "name": "billing",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_AGENT 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": {
    "id": 1,
  },
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_AGENT 2`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_CUSTOMER 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": {
    "data": {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_SPAM_START 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": true,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": true,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_SPAM_START 2`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_SPAM_SUCCESS 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_STATUS 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "closed",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_SUBJECT 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "another title",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_TEAM 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": {
    "id": 1,
  },
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_TEAM 2`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_TICKET_MESSAGE_REQUEST 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [
    {
      "id": 1,
      "request_id": 2,
    },
  ],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_TYPING_ACTIVITY_SHOPPER 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_TYPING_ACTIVITY_SHOPPER 2`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": true,
    "isShopperTypingTimeoutId": 100,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle SET_TYPING_ACTIVITY_SHOPPER 3`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle TOGGLE_HISTORY 1`] = `
{
  "_internal": {
    "displayHistory": true,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle TOGGLE_HISTORY 2`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle TOGGLE_HISTORY 3`] = `
{
  "_internal": {
    "displayHistory": true,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle UPDATE_ACTION_ARGS_ON_APPLIED 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": {
      "actions": {
        "0": {
          "arguments": {
            "hello": "world",
          },
        },
      },
      "id": 1,
    },
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle UPDATE_TICKET_MESSAGE_START 1`] = `
{
  "_internal": {
    "displayHistory": false,
    "isPartialUpdating": false,
    "isShopperTyping": false,
    "isShopperTypingTimeoutId": undefined,
    "loading": {
      "deleteMessage": false,
      "fetchTicket": false,
      "setSpam": false,
      "setTrash": false,
    },
    "pendingMessages": [],
    "shouldDisplayAuditLogEvents": false,
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_team": null,
  "assignee_user": null,
  "channel": "email",
  "custom_fields": {},
  "customer": null,
  "events": [],
  "is_unread": false,
  "messages": [],
  "priority": "normal",
  "reply_options": {
    "email": {
      "answerable": true,
    },
    "internal-note": {
      "answerable": true,
    },
  },
  "spam": false,
  "state": {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers should handle same actions stacking 1`] = `
{
  "actions": [
    {
      "arguments": {
        "status": "closed",
      },
      "name": "setStatus",
      "title": "Set status",
      "type": "user",
    },
    {
      "arguments": {
        "subject": "Test Verb",
      },
      "name": "setSubject",
      "title": "Set subject",
      "type": "user",
    },
  ],
  "id": 2,
}
`;
